--- a/ApiServices/ApiServices.csproj
+++ b/ApiServices/ApiServices.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{28AF4F34-8CB0-4DA9-8E17-486CA36DA6E2}</ProjectGuid>
+    <ProjectGuid>{0621159B-F76E-4523-B288-233887FC6F52}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataService</RootNamespace>
-    <AssemblyName>DataService</AssemblyName>
+    <RootNamespace>ApiServices</RootNamespace>
+    <AssemblyName>ApiServices</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
-    <Compile Include="Models\TemplateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DataService\DataService.cs" />
+    <Compile Include="Services\DataService\Models\TemplateModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\Repository\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
