--- a/tr-api/TR_Api.csproj
+++ b/tr-api/TR_Api.csproj
@@ -159,12 +159,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="Controllers\TemplateController.cs" />
+    <Compile Include="Models\ApiMessage.cs" />
+    <Compile Include="Services\Helpers.cs" />
     <Compile Include="Services\TrExceptionHandler.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ApiMessage.cs" />
-    <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HttpValidationModule.cs" />
     <Compile Include="Services\RequestValidation.cs" />
@@ -185,9 +185,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataService\DataService.csproj">
-      <Project>{28af4f34-8cb0-4da9-8e17-486ca36da6e2}</Project>
-      <Name>DataService</Name>
+    <ProjectReference Include="..\ApiServices\ApiServices.csproj">
+      <Project>{0621159b-f76e-4523-b288-233887fc6f52}</Project>
+      <Name>ApiServices</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
