Ability to send Response without modifying the response status code

--- a/tr-api/TR_Api.csproj
+++ b/tr-api/TR_Api.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="Controllers\TemplateController.cs" />
     <Compile Include="Models\ApiMessage.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Services\Helpers.cs" />
     <Compile Include="Services\TrExceptionHandler.cs" />
     <Compile Include="Global.asax.cs">
