--- a/tr-api/TR_Api.csproj
+++ b/tr-api/TR_Api.csproj
@@ -157,10 +157,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="Controllers\TemplateController.cs" />
     <Compile Include="Models\ApiMessage.cs" />
-    <Compile Include="Models\Response.cs" />
+    <Compile Include="Models\ResponseMessage.cs" />
     <Compile Include="Services\Helpers.cs" />
     <Compile Include="Services\TrExceptionHandler.cs" />
     <Compile Include="Global.asax.cs">
