Still in Progress

--- a/ApiServices/ApiServices.csproj
+++ b/ApiServices/ApiServices.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DataService\DataService.cs" />
+    <Compile Include="Services\DataService\TemplateService.cs" />
     <Compile Include="Services\DataService\Models\TemplateModel.cs" />
   </ItemGroup>
   <ItemGroup>
