--- a/tr-api/TR_Api.csproj
+++ b/tr-api/TR_Api.csproj
@@ -157,7 +157,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\TemplateController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Models\ApiMessage.cs" />
     <Compile Include="Models\ResponseMessage.cs" />
     <Compile Include="Services\Helpers.cs" />
