--- a/ApiServices/ApiServices.csproj
+++ b/ApiServices/ApiServices.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\EmployeeService\EmployeeService.cs" />
+    <Compile Include="Services\EmployeeService\EmployeeFacade.cs" />
     <Compile Include="Services\EmployeeService\Models\Employee.cs" />
   </ItemGroup>
   <ItemGroup>
